src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_first_field_type.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: , b: a, c: a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of identifier, number, `true`, `false`, `if`, `while`, `(`, `-`",
                span: 1:8; [7, 8],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    770,
                ),
            },
            Diagnostic {
                message: "Unexpected `eof`, expected one of `;`, `.`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:22; [21, 21],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1349,
                ),
            },
        ],
    },
)
