src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_first_field_value.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: , b: a, c: a };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (8) identifier 933, number 934, `true` 936, `false` 937, `if` 931, `while` 932, `(` 938, `-` 935",
                span: 1:8; [7, 8],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    927,
                ),
            },
        ],
    },
)
