src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_open_curly_no_fields.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of `;`, `.`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1349,
                ),
            },
        ],
    },
)
