src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_open_curly_one_field.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S a: a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected identifier, expected one of `;`, `.`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1388,
                ),
            },
        ],
    },
)
