src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_second_field_name.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a, : a, c: a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of identifier, `}`",
                span: 1:11; [10, 11],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1304,
                ),
            },
            Diagnostic {
                message: "Unexpected `eof`, expected one of `;`, `.`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:22; [21, 21],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1337,
                ),
            },
        ],
    },
)
