src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_second_field_type.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a, b: , c: a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of identifier, number, `true`, `false`, `if`, `while`, `(`, `-`",
                span: 1:14; [13, 14],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    783,
                ),
            },
            Diagnostic {
                message: "Unexpected `eof`, expected one of `;`, `.`, `(`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:22; [21, 21],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1393,
                ),
            },
        ],
    },
)
