src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_second_field_value.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a, b: , c: a };\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `,`, expected one of (8) identifier 941, number 942, `true` 944, `false` 945, `if` 939, `while` 940, `(` 946, `-` 943",
                span: 1:14; [13, 14],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    935,
                ),
            },
        ],
    },
)
