src/snapshots/transmute__parser__tests__err_struct_instantiation_missing_semicolon.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { a: a }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (12) `;` 1597, `.` 1030, `*` 1203, `/` 1201, `-` 1197, `+` 1199, `==` 1185, `!=` 1187, `>` 1189, `>=` 1191, `<` 1193, `<=` 1195",
                span: 1:11; [10, 10],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1597,
                ),
            },
        ],
    },
)
